feature(integration-tests): Implement integration tests for the slack bot
- Test implementation. Start up the service and check that it returns the expected data that it got from an integration.
- Incorporate it in CI/CD
- Fix service lint problems